# SpikingTemporalMemory

./: .gitattributes  .gitignore  README.md  auto_build.sh  compile_nestml_models.py  environment.yaml  setup.py
PyNEST/: README.md  compile_nestml_models.py  pyproject.toml
PyNEST/examples/sequence_learning_and_prediction/: README.md  generate_sweep_id.py  local_simulation.py  parameters_space.py  prediction_performance_analysis.py  sequence_generator.py  submission_cluster_simulation.py  submission_cluster_sweep.py  training.py
PyNEST/examples/sequence_learning_and_prediction/wb_configs/: example_config.yaml  sequence_prediction_3.yaml
PyNEST/nestml_models/: stdsp_synapse.nestml
PyNEST/src/spikingtemporalmemory/: __init__.py  default_params.py  helper.py  model.py
PyNEST/tests/: test_build_network.py  test_run.py  test_simple.py
docs/: ModelDescription_SpikingTemporalMemory.tex  Snakefile  config.yaml
docs/figures/: NetworkSketch_SpikingTemporalMemory.fodg
experiments/prediction_performance/: README.md  local_simulation.py  parameters_space_task2.py  parameters_space_task2_stdp.py  parameters_space_task3.py  parameters_space_task4.py  prediction_performance_analysis.py  submission_cluster_analysis.py  submission_cluster_simulation.py  training.py
experiments/self-prediction/: README.md  parameters_space.py  submission_cluster_analysis.py  submission_hambach_simulation.py  training.py  utils.py
experiments/sequence_learning_and_prediction/: README.md  local_simulation.py  parameters_space.py  parameters_space_seq_len.py  parameters_space_simple_seq.py  prediction_performance_analysis.py  sequence_generator.py  submission_cluster_analysis.py  submission_cluster_simulation.py  submission_cluster_sweep.py  testing.py  training.py  training_evaluation.py  training_overlap.py
experiments/sequence_learning_and_prediction/wb_configs/: default_sequence_prediction.yaml  sequence_prediction.yaml
figures/: network_structure.py  plot_connectivity.py  plot_spikes.py  utils.py
figures/others/: network_activity.py  network_structure.py  prediction_performance.py
materials/model_description/: ext-STM_model_description.tex
materials/scripts/: patterns_uniqueness.py
materials/sequence_generator/: sequence_generator.py
nestml_models/: iaf_psc_exp_nonlineardendrite.nestml  iaf_psc_exp_nonlineardendrite_neuron.nestml  iaf_psc_exp_nonlineardendrite_newestNESTML.nestml  stdsp_homeostasis_synapse.nestml  stdsp_homeostasis_synapse_newestNESTML.nestml  stdsp_synapse.nestml
shtm/: helper.py  model.py
