#!/bin/bash
#
# This file is part of spikingtemporalmemory.
#
# spikingtemporalmemory is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# spikingtemporalmemory is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with spikingtemporalmemory.  If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "spikingtemporalmemory"
description = "PyNEST implementation of the spiking temporal memory model."
dynamic = ["version"]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Younes Bouhadjar", email = "y.bouhadjar@fz-juelich.de" },
    { name = "Melissa Lober", email = "m.lober@fz-juelich.de" },
    { name = "Tom Tetzlaff", email = "t.tetzlaff@fz-juelich.de" }    
]
maintainers = [
    { name = "Younes Bouhadjar", email = "y.bouhadjar@fz-juelich.de" },
    { name = "Melissa Lober", email = "m.lober@fz-juelich.de" },
    { name = "Tom Tetzlaff", email = "t.tetzlaff@fz-juelich.de" }    
]
keywords = [
    "sequence learning",
    "neuroscience",
    "computational neuroscience", 
    "neuromorphic computing",
    "spiking temporal memory",
    "NEST simulator",
    "NESTML",
    "neural networks",
]

requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    # "nest-simulator",   ## needs `pip install nest-simulator` to become available    
    "numpy",
    "psutil",
    "wandb",
    "nestml>=8.1.0",
    "parameters_space"
]

[metadata]
description-file = "README.md"

[project.urls]
"Homepage" = "https://github.com/YounesBouhadjar/SpikingTemporalMemory"
"Repository" = "https://github.com/YounesBouhadjar/SpikingTemporalMemory"
"Bug Tracker" = "https://github.com/YounesBouhadjar/SpikingTemporalMemory/issues"
"Changelog" = "https://github.com/YounesBouhadjar/SpikingTemporalMemory/releases"


[project.optional-dependencies]
test = [
    "pydocstyle",
    "pylint",
    "pytest",
]
dev = [
    "pydocstyle",
    "pylint",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
